# Adaptive-ROI-for-Lidar

./: README.md  converter.txt
Test/: README.md
Test/for_test/: CMakeLists.txt  package.xml
Test/for_test/config/: clustering.rviz
Test/for_test/include/clustering/: clustering_node.hpp
Test/for_test/launch/: launch.py
Test/for_test/src/: 123.cpp  clustering.cpp  clustering_node.cpp  depth_cluster.cpp
Test/for_test/test/: clustering_launch.testing.py
converter/: CMakeLists.txt  package.xml
converter/config/: converter.rviz
converter/include/converter/: converter_node.hpp
converter/launch/: launch.py
converter/src/: converter.cpp  converter_node.cpp
converter/test/: converter_launch.testing.py
cpp_pubsub/: CMakeLists.txt  package.xml
cpp_pubsub/src/: subscriber_member_function.cpp
lidar_preprocessing/: CMakeLists.txt  package.xml
lidar_preprocessing/include/lidar_preprocessing/: lidar_preprocessing_node.hpp  module.hpp  ransac_node.hpp  roi_h_node.hpp
lidar_preprocessing/launch/: launch.py
lidar_preprocessing/src/: lidar_preprocessing.cpp  lidar_preprocessing_node.cpp  module.cpp  ransac.cpp  ransac_node.cpp  roi_h.cpp  roi_h_node.cpp
